kubernetes/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: gitops-hello-world-gcb
  namespace: staging
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: gitops-hello-world-gcb
        version: v1
    spec:
      containers:
      - image: gcr.io/k8s-cluster-cn/hello-world-gcb:c5e0dc4
        name: gitops-hello-world-gcb
