kubernetes/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: gitops-hello-world-gcb
  labels:
    app: gitops-hello-world-gcb
  namespace: staging
spec:
  ports:
  - name: http
    port: 8888
    targetPort: 8888
    protocol: TCP
  selector:
    app: gitops-hello-world-gcb
  type: ClusterIP
